// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Caption renders 1`] = `
<p
  className="sc-hYufOg bdmIxQ"
>
  Text
</p>
`;

exports[`Caption renders colors 1`] = `
Array [
  <p
    className="sc-hYufOg bdmIxQ"
  >
    Default color is Bulma
  </p>,
  <p
    className="sc-hYufOg cLrtqJ"
    color="piccolo.100"
  >
    Piccolo
  </p>,
  <p
    className="sc-hYufOg befCtH"
    color="trunks.100"
  >
    Trunks
  </p>,
  <p
    className="sc-hYufOg kmDanl"
    color="krillin.100"
  >
    Krillin
  </p>,
]
`;

exports[`Caption renders font-weight 1`] = `
Array [
  <p
    className="sc-hYufOg bdmIxQ"
  >
    Default font-weight is regular
  </p>,
  <p
    className="sc-hYufOg gKbooe"
  >
    Font-weight is bold
  </p>,
]
`;

exports[`Caption renders line height 1`] = `
Array [
  <p
    className="sc-hYufOg bdmIxQ"
  >
    Line-height is pre-calculated
  </p>,
  <p
    className="sc-hYufOg bbeYlN"
  >
    Custon line-height
  </p>,
]
`;

exports[`Caption renders semantic tags 1`] = `
Array [
  <p
    className="sc-hYufOg bdmIxQ"
  >
    Paragraph is a default tag
  </p>,
  <span
    className="sc-hYufOg bdmIxQ"
  >
    Span tag
  </span>,
  <label
    className="sc-hYufOg bdmIxQ"
  >
    Label tag
  </label>,
]
`;

exports[`Caption renders sizes 1`] = `
Array [
  <p
    className="sc-hYufOg bdmIxQ"
  >
    Default font-size is 16px
  </p>,
  <p
    className="sc-hYufOg gAzCpP"
    size={24}
  >
    Size is 24px
  </p>,
  <p
    className="sc-hYufOg fbiVHj"
    size={48}
  >
    Size is 48px
  </p>,
]
`;

exports[`Caption renders text-align 1`] = `
Array [
  <p
    className="sc-hYufOg bdmIxQ"
  >
    Text-align is not specified
  </p>,
  <p
    className="sc-hYufOg lhMzAP"
  >
    Centered Text
  </p>,
  <p
    className="sc-hYufOg bRJOrw"
  >
    Right alignment
  </p>,
]
`;

exports[`Caption renders underline 1`] = `
Array [
  <p
    className="sc-hYufOg bdmIxQ"
  >
    Default text-decoration is none
  </p>,
  <p
    className="sc-hYufOg icUgYB"
  >
    Underline Text
  </p>,
]
`;

exports[`Caption renders uppercase 1`] = `
Array [
  <p
    className="sc-hYufOg bdmIxQ"
  >
    Default text-transform is none
  </p>,
  <p
    className="sc-hYufOg hPvvWn"
  >
    Uppercase Text
  </p>,
]
`;
